--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
-members = ["rust_elm_types_derive"]
+members = ["realm_mate"]
 
 [dependencies]
-rust_elm_types_derive = {path = "./rust_elm_types_derive/"}
+realm_mate = {path = "./realm_mate/"}
 serde = "~1.0.27"
 serde_derive = "~1.0.27"
 serde_json = "~1.0.9"
